# iota-streams-esp32

./: .gitignore  CMakeLists.txt  MEMORY_USAGE.md  README.md  RUNTIME_OUTPUT.md  sdkconfig  sdkconfig.default  sdkconfig.dev  sdkconfig.opt  sdkconfig.wip  sdkconfig.working
components/clib/: clib.c
components/clib/include/: CApi.h
components/rustlib/: Cargo.toml  build.rs
components/rustlib/patches/getrandom/src/: espidf.rs  lib.rs
components/rustlib/src/: lib.rs
main/: main.c
scripts/: run-qemu.sh
scripts/docker/: compile.sh  run-qemu.sh
